internal/gatewayapi/testdata/gateway-with-two-listeners-with-same-name.in.yaml
gateways:
- apiVersion: gateway.networking.k8s.io/v1beta1
  kind: Gateway
  metadata:
    namespace: envoy-gateway
    name: gateway-1
  spec:
    gatewayClassName: envoy-gateway-class
    listeners:
    - name: http-1
      protocol: HTTP
      port: 8080
    - name: http-1
      protocol: HTTP
      port: 80
